[FIX] Fix comments layout for better readability and conform better to Bootstrap pattern (media object, media list); remove related obsolete CSS rules.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/14.x@54340 b456876b-0849-0410-b77d-98878d47e9d5

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -1958,11 +1958,6 @@ body.tiki_forums .normal {
 #comment-container-below .actions {
   float: right;
 }
-#comment-container .avatar,
-#comment-container-below .avatar {
-  float: left;
-  margin-right: .7em;
-}
 #comment-container .author_info,
 #comment-container-below .author_info {
   padding: 0;
